# Comparing-Filters

./: .gitignore  Built_and_Run_valid_test.sh  CMakeLists.txt  README.md  Spec_main.cpp  hashutil.h  main.cpp  sa_main.cpp
Analyse/: analyse.cpp  analyse.hpp
Bloom_Filter/: bloom.hpp  counting_bloom.h  simd-block-fixed-fpp.h  simd-block.h  ts-simd-block.h
Comparing/: b_helpers.cpp  b_helpers.hpp  benchmark_integer.cpp  benchmark_integer.hpp  benchmark_using_multisets.cpp  benchmark_using_multisets.hpp  benchmarking_cuckoo_filter.cpp  benchmarking_cuckoo_filter.hpp  benchmarking_filters.cpp  benchmarking_filters.hpp
Comparing/Test_output_formatting/: test_printer.cpp  test_printer.hpp
Filter_BF/: main.cpp
Filter_BF/New_BF/: main.cpp
Filter_BF/New_BF/General_BF/: GeneralBF.cpp  GeneralBF.h
Filter_BF/New_BF/Grey_Box_Function_Dir/: GreyBoxFunction.cpp  GreyBoxFunction.h
Filter_BF/New_BF/Hash_files/: Hash.cpp  Hash.h  MurmurHash3.cpp
Filter_BF/New_BF/Remote/: Remote.cpp  Remote.h
Filter_BF/New_BF/Scripts/: delete_folders.sh
Filter_BF/New_BF/V_tests/: tests.cpp  tests.h
Filter_BF/New_BF/Wrapper/: Wrapper.cpp  Wrapper.h
Filter_PD/: Todo.txt  main.cpp
Filter_PD/CPD/: CPD.cpp  CPD.hpp  CPD_validator.cpp  CPD_validator.hpp  Counters_Array.cpp  Counters_Array.hpp  Naive_Counter_Endec.cpp  Naive_Counter_Endec.hpp
Filter_PD/Filters/Dict/: dict.cpp  dict.hpp  multi_dict.cpp  multi_dict.hpp
Filter_PD/Filters/POW2C/: const_filter.cpp  const_filter.h  gen_2Power.cpp  gen_2Power.h  pow2c_filter.cpp  pow2c_filter.h  pow2c_naive_filter.cpp  pow2c_naive_filter.h
Filter_PD/Global_functions/: basic_functions.cpp  basic_functions.h  cuckoo_and_counting_macros.hpp  macros.h
Filter_PD/Hash/: Hash.cpp  Hash.h  Permutation.cpp  Permutation.h  static_hashing.h
Filter_PD/Hash/hashutil_backup/: lookup3.c  lookup3.h
Filter_PD/Hash_Table/: hash_table.cpp  hash_table.hpp  hash_table_var.cpp  hash_table_var.hpp  multi_hash_table.cpp  multi_hash_table.hpp
Filter_PD/PD/Constant_size_PD/: const_Header.cpp  const_PD.h
Filter_PD/PD/Contiguous_PD/: cg_PD.cpp  cg_PD.h
Filter_PD/PD/Naive_PD/: cg_naive_PD.cpp  cg_naive_PD.h  naive_Body.cpp  naive_Body.h  naive_Header.cpp  naive_Header.h  naive_PD.cpp  naive_PD.h
Filter_PD/PD/Non_Contiguous_PD/: Body.cpp  Body.h  Header.cpp  Header.h  PD.cpp  PD.h
Filter_PD/PD/Safe_PD/: safe_PD.cpp  safe_PD.h  v_Body.cpp  v_Body.h  v_Header.cpp  v_Header.h
Filter_PD/Tests/Benchmarking/: benchmark_counting_filter.cpp  benchmark_counting_filter.hpp  benchmark_tests.cpp  benchmark_tests.h  old_benchmark_tests.cpp  old_benchmark_tests.h
Filter_PD/Tests/Validation/: validate_bit_op.cpp  (+13 more)
Filter_PD/bit_operations/: bit_op.cpp  bit_op.h  bit_word_converter.cpp  bit_word_converter.hpp  my_bit_op.cpp  my_bit_op.hpp
Filter_Quotient/: main.cpp
Filter_Quotient/GlobalFunctions/: globalFunction.cpp  globalFunction.h
Filter_Quotient/Hash/: Hash.cpp  Hash.h  MurmurHash3.cpp
Filter_Quotient/QuotientFilter/: BasicFilter.cpp  BasicFilter.h  BitArray.cpp  BitArray.h  DataBase.cpp  DataBase.h  Filter_QF.cpp  Filter_QF.h
Filter_Quotient/Tests/: DBtests.cpp  DBtests.h
Hash_functions/: BobJenkins.cpp  BobJenkins.h  MurmurHash3.cpp  MurmurHash3.h
Outputs/: local_24.txt  local_24_with_basic_pd.txt  no_opt.txt  no_opt2.txt  output_with_fp.txt  server_24.txt  server_24_with_PD.txt  with_opt_O3.txt  with_opt_O3_2.txt  with_opt_O3_3.txt
PD_Filter/: CMakeLists.txt  PD.cpp  PD.h  TPD.hpp  basic_function_util.cpp  basic_function_util.h  dict.hpp  hash_table.cpp  hash_table.hpp  hashutil.cpp  hashutil.hpp  macros.h  main.cpp  tests.cpp  tests.hpp
PD_Filter/Analyse/: analyse.cpp
PD_Filter/Dict320/: Dict256_Ver4.hpp  Dict256_Ver5.hpp  Dict256_Ver6.hpp  Dict256_Ver6_DB.hpp  Dict256_Ver7 backup.hpp  Dict256_Ver7.hpp  Dict320.hpp  Dict320_v2.hpp  pd256.cpp  pd256.hpp  pd256_plus.cpp  pd256_plus.hpp  pd320.cpp  pd320.hpp  pd320_v2.cpp  pd320_v2.hpp  twoChoicer256.hpp  twoChoicer320.hpp
PD_Filter/Dict512/: Dict512.hpp  Dict512_SparseSpare.hpp  Dict512_Ver2.hpp  Dict512_Ver3.hpp  Dict512_Ver4.hpp  Dict512_With_CF.hpp  DictApx512.hpp  pd512.cpp  pd512.hpp  pd512_plus.cpp  pd512_plus.hpp  pd512_split.hpp  ts_pd512.cpp  ts_pd512.hpp  twoChoicer.hpp
PD_Filter/Fixed_PD/: Fixed_Dict.hpp  Fixed_Dict_Ver2.hpp  fixed_pd_45.cpp  fixed_pd_45.hpp  fpd.cpp  fpd.hpp  v_tests.cpp  v_tests.hpp  wrap_fpd.cpp  wrap_fpd.hpp
PD_Filter/HashTables/: HistoryLog.cpp  HistoryLog.hpp  Level3.hpp  Spare_Low_Load.hpp  Spare_Validator.hpp  hashTable_Aligned.hpp  hashTable_BatchPacking.hpp  hashTable_CuckooFilter.hpp  hashTable_Packed.hpp  packed_spare.hpp  packed_spare_DB.hpp
PD_Filter/L2_pd/: L2Bucket_mq.cpp  L2Bucket_mq.hpp  temp_junk.txt  temp_main.cpp  tpd.cpp  tpd.hpp  twoDimPD.cpp  twoDimPD.hpp
PD_Filter/Safe/: cc_pd.hpp  safe512.hpp
PD_Filter/TPD_Filter/: T_dict.hpp  att_hTable.hpp  basic_function_util.cpp  basic_function_util.h  dict512.hpp  old_dict512.hpp  pd512.cpp  pd512.hpp  pd512_wrapper.hpp
PD_Filter/Validation/: validate_hash_table.cpp  validate_hash_table.hpp
PD_Filter/d512/: Dict512.hpp  Dict512_Ver2.hpp  Dict512_With_CF.hpp  att_d512.hpp  hashTable_Aligned.hpp  hashTable_CuckooFilter.hpp  hashTable_Packed.hpp  pd512.cpp  pd512.hpp  twoChoicer.hpp
Safe/: cc_pd.hpp  safe512.hpp
Safe/Constant_size_PD/: const_Body.h  const_PD.cpp
TPD_Filter/: TPD.hpp  T_dict.hpp  att_hTable.hpp  basic_function_util.cpp  basic_function_util.h  dict512.hpp  pd-test.cpp  pd512.cpp  pd512.h  pd512.hpp  pd512_wrapper.hpp
Tests/: dict_approximation_tests.hpp  minimal_tests.hpp  new_tests.cpp  new_tests.hpp  printutil.cpp  printutil.hpp  tests.cpp  tests.hpp  wrappers.hpp  wrappers_for_debugging.hpp
cuckoo/: cuckoofilter.h
cuckoofilter/src/: cuckoofilter.h  ts_cuckoofilter.h
d512/: att_d512.hpp
morton/: bf.h  block.h  compressed_cuckoo_filter.h  hash_util.h  morton_sample_configs.h  util.h
xorfilter/: xor_fuse_filter.h  xorfilter.h  xorfilter_10_666bit.h  xorfilter_10bit.h  xorfilter_13bit.h  xorfilter_2.h  xorfilter_2n.h  xorfilter_plus.h  xorfilter_singleheader.h
(+16 files in other folders)
